# Hardcoder

./: .gitignore  Android.mk  HardCoderJNI.java  LICENSE  README.md  allclasses-noframe.html  amc.proto  build.gradle  com_tencent_mm_hardcoder_HardCoderJNI.cpp  com_tencent_mm_hardcoder_HardCoderJNI.h  deprecated-list.html  gradle.properties  gradlew.bat  help-doc.html  index-all.html  protocol.h  server.cpp  settings.gradle
com/tencent/mm/hardcoder/: HCPerfManager.PerformanceTask.html  HCPerfManager.PerformanceTaskStop.html  HCPerfManager.html  HCPerfStatThread.PerformanceStatus.html  HardCoderCallback.ConnectStatusCallback.html  HardCoderCallback.SceneReportCallback.html  HardCoderCallback.html  HardCoderJNI.HCPerfManagerThread.html  HardCoderJNI.html  HardCoderLog.html  HardCoderReporter.html
docs/: FAQ.md  README_chinese.md  hardcoder_introduction.md  hardcoder_technology_introduction.md  hardcoder_testapp_test_guide.md  hardcoder_users_guide.md
gradle/: WeChatNativeDepend.gradle  WeChatPublish.gradle
gradle/wrapper/: gradle-wrapper.properties
libapp2sys/: .gitignore  Android.mk  CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
libapp2sys/prebuilt/protoc/linux-x86/: protoc
libapp2sys/src/main/: AndroidManifest.xml
libapp2sys/src/main/cpp/: c2java.h  client.h  com_tencent_mm_hardcoder_HardCoderJNI.cpp  com_tencent_mm_hardcoder_HardCoderJNI.h  header.h  localsocket.h  procutil.h  protocol.h  server.cpp  server.h  udp.h  util.h
libapp2sys/src/main/cpp/cjson/: cJSON.c
libapp2sys/src/main/java/com/tencent/mm/hardcoder/: HCPerfManager.java  HCPerfStatThread.java  HardCoderCallback.java  HardCoderJNI.java  HardCoderLog.java  HardCoderReporter.java  HardCoderUtil.java
libapp2sys/src/main/proto/: amc.proto
libapp2sys/src/main/res/values/: strings.xml
references/: allclasses-frame.html  constant-values.html  index.html  overview-tree.html  package-list
references/com/tencent/mm/hardcoder/: HCPerfStatThread.html  HardCoderCallback.FuncRetCallback.html  HardCoderCallback.RequestStatus.html  HardCoderJNI.AnrCallback.html  HardCoderLog.ILog.html  HardCoderReporter.HardCoderReporterInterface.html  HardCoderUtil.html  package-frame.html  package-summary.html  package-tree.html
testapp/: Android.mk  build.gradle  proguard-rules.pro
testapp/src/main/: AndroidManifest.xml
testapp/src/main/java/com/tencent/mm/hardcoder/testapp/: MainActivity.java  QuickStart.java  SecondActivity.java  TestAPIs.java  TestVideo.java  TestWebView.java
testapp/src/main/res/layout/: activity_main.xml  quick_start.xml  second_activity.xml  test_apis.xml  test_video.xml  test_webview.xml
testapp/src/main/res/values/: strings.xml
